// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jump(delta, any, any, action):  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "next",
    "length": 2,
    "n": 1,
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "base",
      "hash": "yolo",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/bar",
        "scene": "",
        "search": "hell=yea",
        "url": "/base/bar?hell=yea#yolo",
      },
      "params": Object {
        "foo": "bar",
      },
      "query": Object {
        "hell": "yea",
      },
      "state": Object {
        "something": 123,
      },
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`jump(delta, any, any, action):  - response 2`] = `
Object {
  "basename": "base",
  "hash": "yolo",
  "location": Object {
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "pathname": "/bar",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "scene": "",
    "search": "hell=yea",
    "status": 200,
    "url": "/base/bar?hell=yea#yolo",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {
    "hell": "yea",
  },
  "state": Object {
    "something": 123,
  },
  "type": "FIRST",
}
`;

exports[`jump(delta, any, any, action):  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`jump(delta, any, any, action):  - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`jump(delta, any, any, action):  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`jump(delta, any, any, action):  - routes - REDIRECTED - onComplete 2`] = `0`;

exports[`jump(delta, any, any, action):  - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/base/bar?hell=yea#yolo",
      Object {
        "something": 123,
      },
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 1,
}
`;

exports[`jump(delta, any, any, action):  - sessionStorage 2`] = `
Object {
  "entries": Array [
    Array [
      "/base/bar?hell=yea#yolo",
      Object {
        "something": 123,
      },
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 0,
}
`;

exports[`jump(delta, any, any, action):  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "next",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "base",
      "hash": "yolo",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/bar",
        "scene": "",
        "search": "hell=yea",
        "url": "/base/bar?hell=yea#yolo",
      },
      "params": Object {
        "foo": "bar",
      },
      "query": Object {
        "hell": "yea",
      },
      "state": Object {
        "something": 123,
      },
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`jump(delta, any, any, action):  - state 2`] = `
Object {
  "location": Object {
    "basename": "base",
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "yolo",
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/bar",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "query": Object {
      "hell": "yea",
    },
    "scene": "",
    "search": "hell=yea",
    "state": Object {
      "something": 123,
    },
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/base/bar?hell=yea#yolo",
  },
  "title": "FIRST",
}
`;

exports[`jump(delta, any, any, action):  - title 1`] = `"SECOND"`;

exports[`jump(delta, any, any, action):  - title 2`] = `"FIRST"`;

exports[`jump(delta, any, any, action):  - windowLocation 1`] = `"/second"`;

exports[`jump(delta, any, any, action):  - windowLocation 2`] = `"/base/bar?hell=yea#yolo"`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - response 1`] = `
Object {
  "basename": "base",
  "hash": "yolo",
  "location": Object {
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "pathname": "/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "scene": "",
    "search": "hell=yea",
    "status": 200,
    "url": "/base/bar?hell=yea#yolo",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {
    "hell": "yea",
  },
  "state": Object {
    "something": 123,
  },
  "type": "FIRST",
}
`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/base/bar?hell=yea#yolo",
      Object {
        "something": 123,
      },
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 0,
}
`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - state 1`] = `
Object {
  "location": Object {
    "basename": "base",
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "yolo",
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "query": Object {
      "hell": "yea",
    },
    "scene": "",
    "search": "hell=yea",
    "state": Object {
      "something": 123,
    },
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/base/bar?hell=yea#yolo",
  },
  "title": "FIRST",
}
`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - title 1`] = `"FIRST"`;

exports[`jump(delta, any, any, action): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"jump","args":[-1,null,null,{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}}]}} - windowLocation 1`] = `"/base/bar?hell=yea#yolo"`;
